--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-09-16 10:23:13
-# Total rules: 6967
+# Generated from relevant_rules_wildcard_aware.txt on 2025-09-17 09:45:41
+# Total rules: 6974
 
 .0a0d-d3l1vr.b-cdn.net
 .0gc6y58nkk.data.adobedc.net
@@ -49,6 +49,7 @@
 .7dzt0xnemh.data.adobedc.net
 .7ng6v3lu3c.execute-api.us-east-1.amazonaws.com
 .7q1z79gxsi.global.ssl.fastly.net
+.829331534d183e7d1f6a-8d91cc88b27b979d0ea53a10ce8855ec.r96.cf5.rackcdn.com
 .857chwukib.data.adobedc.net
 .888.tv.sohu.com
 .8rn1y79f02-1.algolianet.com
@@ -207,7 +208,6 @@
 .a24698640007.cdn.optimizely.com
 .a24704070387.cdn.optimizely.com
 .a24708110218.cdn.optimizely.com
-.a24717620105.cdn.optimizely.com
 .a24723780022.cdn.optimizely.com
 .a24731660284.cdn.optimizely.com
 .a24783860046.cdn.optimizely.com
@@ -424,6 +424,7 @@
 .ad-log-upload.mihoyo.com
 .ad-material.ys7.com
 .ad-particlenews-com-2-1579123584.us-west-2.elb.amazonaws.com
+.ad-scope.com.cn
 .ad-serve.b-cdn.net
 .ad-survey.com
 .ad-tech-pyxis-uat-1649189048.us-west-2.elb.amazonaws.com
@@ -3053,6 +3054,7 @@
 .d7.sinaimg.cn
 .d7016uqa4s0lw.cloudfront.net
 .d761erxl2qywg.cloudfront.net
+.d7d3cf2e81d293050033-3dfc0615b0fd7b49143049256703bfce.ssl.cf1.rackcdn.com
 .d7dza8s7j2am6.cloudfront.net
 .d7gse3go4026a.cloudfront.net
 .d7jpk19dne0nn.cloudfront.net
@@ -4146,6 +4148,7 @@
 .hm.baidu.com
 .hm2wjuuus3.execute-api.ap-northeast-1.amazonaws.com
 .hmma.baidu.com
+.hnzkclouds.com
 .hog.crowdin.com
 .holaflylimited.data.adobedc.net
 .homeborn.cn
@@ -4162,6 +4165,7 @@
 .hs.eloqua.com
 .ht.www.sogou.com
 .ht4t7b8mjz.data.adobedc.net
+.http-inputs-notion.splunkcloud.com
 .httpdns-api.aliyuncs.com
 .httpdns-sc.aliyuncs.com
 .httpdns-sdk.n.netease.com
@@ -5842,6 +5846,7 @@
 .sponsor-logos.s3.amazonaws.com
 .spoor-api.ft.com
 .sprig.com
+.spro.so.com
 .sprocket-ping.s3.amazonaws.com
 .spynet2.microsoft.com
 .spynetalt.microsoft.com
@@ -6013,6 +6018,7 @@
 .t4.market.xiaomi.com
 .t5.market.xiaomi.com
 .ta.qq.com
+.ta.trs.cn
 .tab.volces.com
 .taboola.com
 .tagdelivery.mayoclinic.org
@@ -6739,6 +6745,7 @@ bs.l.qq.com
 c.id.mi.com
 c.l.qq.com
 c2.l.qq.com
+c753738.r38.cf2.rackcdn.com
 cb.l.qq.com
 cc.sys.intl.xiaomi.com
 ccc.sys.intl.xiaomi.com
