--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-09-20 09:40:02
-# Total rules: 7306
+# Generated from relevant_rules_wildcard_aware.txt on 2025-09-21 10:34:25
+# Total rules: 7376
 
 .0a0d-d3l1vr.b-cdn.net
 .0gc6y58nkk.data.adobedc.net
@@ -7,6 +7,7 @@
 .0nvdw1kkeb.data.adobedc.net
 .1.wps.cn
 .1080872514.rsc.cdn77.org
+.1097834592.rsc.cdn77.org
 .1187531871.rsc.cdn77.org
 .119.29.196.104.bc.googleusercontent.com
 .1208344341.rsc.cdn77.org
@@ -56,6 +57,7 @@
 .7ng6v3lu3c.execute-api.us-east-1.amazonaws.com
 .7q1z79gxsi.global.ssl.fastly.net
 .7zgiest3zy.data.adobedc.net
+.829331534d183e7d1f6a-8d91cc88b27b979d0ea53a10ce8855ec.r96.cf5.rackcdn.com
 .857chwukib.data.adobedc.net
 .888.tv.sohu.com
 .8j1otcsih9.data.adobedc.net
@@ -604,12 +606,14 @@
 .ad.cyapi.cn
 .ad.dev.360.cn
 .ad.docer.wps.cn
+.ad.eporner.com
 .ad.gmw.cn
 .ad.gt.cdn.cloudflare.net
 .ad.imp.joins.com
 .ad.india.xiaomi.com
 .ad.intl.xiaomi.com
 .ad.jia.360.cn
+.ad.jp.ap.valuecommerce.com
 .ad.line-scdn.net
 .ad.m.iqiyi.com
 .ad.mail.sohu.com
@@ -645,6 +649,7 @@
 .ad5.sina.com.cn
 .ad7578-74.myshopify.com
 .ada.baidu.com
+.adagiobanner.s3.amazonaws.com
 .adapi.foooooot.com
 .adash-c.m.taobao.com
 .adash-c.ut.taobao.com
@@ -666,7 +671,6 @@
 .adashx4sg.ut.taobao.com
 .adashx4yt.m.taobao.com
 .adashxgc.ut.taobao.com
-.adasiatagmanager.appspot.com
 .adbehavior.wsa.ximalaya.com
 .adbehavior.ximalaya.com
 .adblock.sina.cn
@@ -705,7 +709,6 @@
 .admarket.21cn.com
 .admarvel.s3.amazonaws.com
 .admd.yam.com
-.admob-gmats.uc.r.appspot.com
 .admob.google.com
 .admobile.top
 .admost-banner.b-cdn.net
@@ -779,6 +782,7 @@
 .ads-zeasn-lb-680910626.eu-west-1.elb.amazonaws.com
 .ads.95516.com
 .ads.amazon.com
+.ads.auctions.yahoo.com
 .ads.bing.com
 .ads.bloomberg.com
 .ads.bssdl.kugou.com
@@ -952,6 +956,7 @@
 .aepxlg.adobe.com
 .afd.baidu.com
 .afd.l.google.com
+.affiliate.googleusercontent.com
 .affiliationjs.s3.amazonaws.com
 .affilimate.io
 .affim.baidu.com
@@ -1013,6 +1018,7 @@
 .amdcopen.m.taobao.com
 .ameriprise.data.adobedc.net
 .amfi.gou.sogou.com
+.aml.valuecommerce.com
 .amp-error-reporting.appspot.com
 .amplitude.com
 .amptrack-dailymail-co-uk.cdn.ampproject.org
@@ -1184,6 +1190,7 @@
 .api.miwifi.com
 .api.mp.uc.cn
 .api.newsfeed.intl.miui.com
+.api.omappapi.com
 .api.sentry.susercontent.com
 .api.setting.intl.miui.com
 .api.sms.intl.miui.com
@@ -1229,6 +1236,7 @@
 .app.adjust.world
 .app.chat.xiaomi.net
 .app.miui.com
+.app.omappapi.com
 .app.optimizely.com
 .app.pendo.io
 .app.posthog.com
@@ -1317,6 +1325,7 @@
 .az.appstore.vivo.com.cn
 .b.bdstatic.com
 .b.smartvideo.youku.com
+.b.stats.paypal.com
 .b2binsider.adobe.com
 .babes-mansion.s3.amazonaws.com
 .badding.oss-ap-southeast-1.aliyuncs.com
@@ -1487,19 +1496,53 @@
 .c-adash.m.taobao.com
 .c-nfa.jd.com
 .c.alimama.com
+.c.ar.msn.com
 .c.arstechnica.com
+.c.at.msn.com
 .c.baidu.com
+.c.be.msn.com
 .c.bingapis.com
+.c.br.msn.com
+.c.ca.msn.com
+.c.cl.msn.com
+.c.de.msn.com
+.c.dk.msn.com
+.c.es.msn.com
+.c.fi.msn.com
+.c.fr.msn.com
 .c.gj.qq.com
+.c.gr.msn.com
+.c.hk.msn.com
+.c.id.msn.com
+.c.ie.msn.com
+.c.il.msn.com
+.c.in.msn.com
+.c.it.msn.com
+.c.jp.msn.com
+.c.latam.msn.com
 .c.live.com
 .c.mse.360.cn
 .c.msn.com
+.c.my.msn.com
 .c.newyorker.com
+.c.nl.msn.com
+.c.no.msn.com
+.c.ph.msn.com
+.c.prodigy.msn.com
+.c.pt.msn.com
+.c.ru.msn.com
 .c.sayhi.360.cn
+.c.se.msn.com
+.c.sg.msn.com
 .c.sm.cn
+.c.th.msn.com
+.c.tr.msn.com
+.c.tw.msn.com
 .c.uaa.iqiyi.com
+.c.uk.msn.com
 .c.wired.com
 .c.yes.youku.com
+.c.za.msn.com
 .c0.ifengimg.com
 .c00.adobe.com
 .c0e5b87c.solaraweb-alj.pages.dev
@@ -1553,7 +1596,6 @@
 .cdn.ark.qq.com
 .cdn.eu.pendo.io
 .cdn.exp.xiaomi.com
-.cdn.onesignal.com
 .cdn.pendo.io
 .cdn.shareaholic.net
 .cdn.stat-track.com.akamaized.net
@@ -1666,11 +1708,13 @@
 .cmp.osano.com
 .cmp.springer.com
 .cmp.springernature.com
+.cmp.uniconsent.com
 .cms.opendsp.tanx.com
 .cms.tanx.com
 .cms.ucweb.com
 .cmshow.gtimg.cn
 .cmsjs.eastmoney.com
+.cmweb.ilike.alibaba.com
 .cn-vmc-images.alicdn.com
 .cn.vercount.one
 .cnbj1.fds.api.xiaomi.com
@@ -1921,6 +1965,7 @@
 .collector.dcdn.baidu.com
 .collector.github.com
 .collector.unsplash.com
+.colruytxtra.data.adobedc.net
 .comet.yahoo.com
 .comm.app.autohome.com.cn
 .commdata.v.qq.com
@@ -2000,7 +2045,6 @@
 .cpu-admin.baidu.com
 .cpu.baidu.com
 .cpucdn.baidu.com
-.cpux.gmud.top
 .cquotient.com
 .cr.adobe.com
 .crab.baidu.com
@@ -2143,6 +2187,7 @@
 .d162nnmwf9bggr.cloudfront.net
 .d169bbxks24g2u.cloudfront.net
 .d16fk4ms6rqz1v.cloudfront.net
+.d16hi2v1mh7lg7.cloudfront.net
 .d16saj1xvba76n.cloudfront.net
 .d16sobzswqonxq.cloudfront.net
 .d1733r3id7jrw5.cloudfront.net
@@ -2473,6 +2518,7 @@
 .d1wc0ojltqk24g.cloudfront.net
 .d1wd81rzdci3ru.cloudfront.net
 .d1wi563t0137vz.cloudfront.net
+.d1wix2gc2cgqis.cloudfront.net
 .d1wjj8n9m51z7v.cloudfront.net
 .d1wjz6mrey9f5v.cloudfront.net
 .d1wscoizcbxzhp.cloudfront.net
@@ -3528,6 +3574,7 @@
 .demkc32bq01ah.cloudfront.net
 .demo.emaillpb.adobe.com
 .demoamericas275.adobe.com
+.derangedadage91wis.files.wordpress.com
 .desgao1zt7irn.cloudfront.net
 .dev-push.m.youku.com
 .dev.email-signify.cjm.adobe.com
@@ -3775,6 +3822,7 @@
 .dqd5t8xfxmhi7.cloudfront.net
 .dqif5bl25s0bf.cloudfront.net
 .dqv45r33u0ltv.cloudfront.net
+.dr.soso.com
 .dr3k6qonw2kee.cloudfront.net
 .dr6su5ow3i7eo.cloudfront.net
 .dr6vcclmzwk74.cloudfront.net
@@ -3817,6 +3865,7 @@
 .dtnaximya.360doc.cn
 .dtpbt6teapmm3.cloudfront.net
 .dtq9oy2ckjhxu.cloudfront.net
+.dts-log.anker.com
 .dtu2kitmpserg.cloudfront.net
 .dtv5loup63fac.cloudfront.net
 .dtv5ske218f44.cloudfront.net
@@ -4505,6 +4554,7 @@
 .i.moshimo.com
 .i.paypal.com
 .i.posthog.com
+.i.singular.net
 .i.skimresources.com
 .i.viafoura.co
 .i1.services.social.microsoft.com
@@ -4574,6 +4624,7 @@
 .imagev2.tx.xmcdn.com
 .img-dsp.oss-cn-beijing.aliyuncs.com
 .img-x.jd.com
+.img.alibaba.com
 .img.gou.wpscdn.cn
 .img.n.nasdaq.com
 .img.response.digicert.com
@@ -4596,6 +4647,7 @@
 .in.applicationinsights.azure.cn
 .in.applicationinsights.azure.com
 .in.tv.global.mi.com
+.in.yimg.com
 .inc-visio-telemetry.officeapps.live.com
 .incoming-data-sense360.s3.amazonaws.com
 .indexww.com
@@ -4623,7 +4675,6 @@
 .inte.sogou.com
 .inte.sogoucdn.com
 .inte.sohu.com
-.intensedebate.com
 .interbank.data.adobedc.net
 .interest.mix.sina.com.cn
 .interface.bilibili.com
@@ -4702,6 +4753,7 @@
 .jswebcollects.kugou.com
 .juggler.services.disqus.com
 .jun01.oss-cn-beijing.aliyuncs.com
+.jzclick.soso.com
 .jzt.jd.com
 .k.qwant.com
 .k8s-matomo-matomoin-1abe0536fc-1571093737.us-east-1.elb.amazonaws.com
@@ -4863,6 +4915,7 @@
 .log.byteoversea.com
 .log.cmbchina.com
 .log.dc.cn.happyelements.com
+.log.eufylife.com
 .log.flight.qunar.com
 .log.geetest.com
 .log.jd.com
@@ -4888,7 +4941,6 @@
 .log.wechatpay.cn
 .log.weixin.qq.com
 .log.wtlogin.qq.com
-.log.ys7.com
 .log.zijieapi.com
 .log0-misc-alinc2.amemv.com
 .log0-misc-lf.amemv.com
@@ -4921,7 +4973,6 @@
 .logapi-and.zhipin.com
 .logapi-ios.zhipin.com
 .logapi.zhipin.com
-.logger.unsplash.com
 .loggw-ex.alipay.com
 .loggw-exsdk.alipay.com
 .loggw.alipay.com
@@ -4984,6 +5035,7 @@
 .lrd.data.adobedc.net
 .ls-dev-account-analytics.s3.amazonaws.com
 .ls.skimresources.com
+.ls.srvcs.tumblr.com
 .lstat.youku.com
 .ltassrv.com.s3.amazonaws.com
 .ltsbsy.qq.com
@@ -5004,7 +5056,6 @@
 .m.qpic.cn
 .m.simba.taobao.com
 .m.skimresources.com
-.m.yap.yahoo.com
 .m1.baidu.com
 .m1tm.motor1.com
 .m365cdn.nel.measure.office.net
@@ -5079,12 +5130,11 @@
 .measure.office.com
 .measure.office.com.akamaized.net
 .measure.sanity.io
-.media.globalsign.com
 .media6degrees.com.cdn.cloudflare.net
 .mediation-tracking.prd.mz.internal.unity3d.com
 .mediation.unity3d.com
+.mediav.com
 .mediavine.com
-.mellowads.b-cdn.net
 .mercury-sdk.snssdk.com
 .mercury.akamaized.net
 .mercury.jd.com
@@ -5175,6 +5225,7 @@
 .mobileads.msn.com
 .mobileanalytics.us-east-1.amazonaws.com
 .mobilecrashreporting.googleapis.com
+.mobileleads.msn.com
 .mobilelog.kugou.com
 .mobilem.360.cn
 .mobilemsg.youku.com
@@ -5351,6 +5402,7 @@
 .nsp-logservice-weardevice-p51-drcn.obs.cn-north-2.myhuaweicloud.com
 .nvm6zgsnhj.data.adobedc.net
 .nxet1.360doc.cn
+.nytadvertising.nytimes.com
 .o.medallia.com
 .o2o-ad-dev.oss-cn-shanghai.aliyuncs.com
 .o2o.api.xiaomi.com
@@ -5361,13 +5413,14 @@
 .oceanengine.com
 .odc.weather.com
 .odp.optimizely.com
+.offer.alibaba.com
 .officedepot.com.data.adobedc.net
 .officehub.nel.measure.office.net
 .offnavi.map.baidu.com
 .ogads-pa.clients6.google.com
 .ogads-pa.googleapis.com
 .ohm-dot-hackster-io.appspot.com
-.omappapi.com
+.oimsgad.qq.com
 .omgid.qq.com
 .omgmta1.qq.com
 .omni.istockphoto.com
@@ -5457,7 +5510,6 @@
 .package.box.xiaomi.com
 .pacontainer.s3.amazonaws.com
 .page.amap.com
-.pagead-googlehosted.l.google.com
 .pagead-tpc.l.google.com
 .pagead.google.com
 .pagead.l.google.com
@@ -5579,6 +5631,8 @@
 .ping.acc.sogou.com
 .pingback.giphy.com
 .pingback.sogou.com
+.pingfore.qq.com
+.pingfore.soso.com
 .pinghot.qq.com
 .pingjs.qq.com
 .pingma.qq.com
@@ -5606,7 +5660,6 @@
 .pjogndc8ixoidna.360doc.cn
 .pl.cp31.ott.cibntv.net
 .platform.linkedin.com
-.platform.tumblr.com
 .plausible-544917143.us-east-1.elb.amazonaws.com
 .plausible-gcp-p01-public.prd.it.unity3d.com
 .plausible.coinglass.com
@@ -5644,6 +5697,7 @@
 .port.sec.miui.com
 .portauthorityclothing.com.data.adobedc.net
 .pos.baidu.com
+.post.update.fbsbx.com
 .posthog-ingress-prod-eu-1819302861.eu-central-1.elb.amazonaws.com
 .posthog-ingress-prod-us-256455477.us-east-1.elb.amazonaws.com
 .posthog-proxy-service-prod-eu-bfb365ef029ea8b9.elb.eu-central-1.amazonaws.com
@@ -5667,6 +5721,7 @@
 .presence.teams.live.com
 .presentationtracking.netflix.com
 .preview.msn.com
+.prexyone.appspot.com
 .princess.com.data.adobedc.net
 .privacy-center.org
 .privacy-policy.truste.com
@@ -5720,7 +5775,6 @@
 .puds.ucweb.com
 .pull.push.sogou.com
 .puma-api.iqiyi.com
-.puma.api.iqiyi.com
 .pups.baidu.com
 .pups.bdimg.com
 .purchasingpower.com.data.adobedc.net
@@ -5744,6 +5798,7 @@
 .pvx.autohome.com.cn
 .pwc.com.data.adobedc.net
 .px-intl.ucweb.com
+.px.srvcs.tumblr.com
 .px.ucweb.com
 .px.wpk.quark.cn
 .pyk.in-neo.cn
@@ -5765,6 +5820,7 @@
 .qpb0.sohu.com
 .qpb1.sohu.com
 .qqdata.ab.qq.com
+.qqlogo.qq.com
 .qqshow2-item.qq.com
 .qreport.qunar.com
 .qring-tms.qq.com
@@ -5795,14 +5851,17 @@
 .rad.microsoft.com
 .rad.msn.com
 .rads.msn.com
+.rads.stackoverflow.com
 .rai-amp-telemetry-ingestion.azurewebsites.net
 .raine.accuweather.com
+.rapid-glade-cde8.asoumare042024.workers.dev
 .ras.yahoo.com
 .rating6.kingsoft-office-service.com
 .raw.vidyard.com
 .rawtelemetry-east.servicebus.windows.net
 .rawtelemetry-west.servicebus.windows.net
 .rcgi.video.qq.com
+.rcm-images.amazon.com
 .rcm.amazon.com
 .rcsdigital.data.adobedc.net
 .rd.autohome.com.cn
@@ -5869,6 +5928,7 @@
 .rh.qq.com
 .rich.qq.com
 .richmedia.video.qq.com
+.richmedia.yimg.com
 .rics.data.adobedc.net
 .riqhisfus.com
 .risk.clearbit.com
@@ -5904,6 +5964,7 @@
 .rtlog16-normal-alisg.tiktokv.com
 .rtlog16-normal-useast1a.tiktokv.com
 .rtlog17-normal-alisg.tiktokv.com
+.rtlog17-normal-useast1a.tiktokv.com
 .rtlog19-normal-alisg.tiktokv.com
 .rtlog19-normal-useast1a.tiktokv.com
 .rtlog22-normal-alisg.tiktokv.com
@@ -5938,15 +5999,19 @@
 .s.petbarn.test.ajo.adobe.com
 .s.skimresources.com
 .s.so.360.cn
+.s.update.fbsbx.com
+.s2s.singular.net
 .s3-use1-epx-d-f1ev1-telemetry-dropbox.s3.amazonaws.com
 .s42w1plegi.data.adobedc.net
 .s7qkhuw0kp.data.adobedc.net
-.sa.api.intl.miui.com
 .sa.bbc.co.uk
 .sa.sina.cn
 .saa.zdnet.com
+.saber.srvcs.tumblr.com
 .safe.ucweb.com
 .safebrowsing.urlsec.qq.com
+.safetrack-s2s.singular.net
+.safetrack.singular.net
 .sail-horizon.com
 .sail-personalize.com
 .sam.msn.com
@@ -5983,6 +6048,7 @@
 .scotiabank.data.adobedc.net
 .scribe.twitter.com
 .sd-tagging.azurefd.net
+.sdk-api-v1.singular.net
 .sdk.fra-01.braze.eu.cdn.cloudflare.net
 .sdk.iad-01.braze.com.cdn.cloudflare.net
 .sdk.iad-02.braze.com.cdn.cloudflare.net
@@ -6004,8 +6070,6 @@
 .sdtagging.azureedge.net
 .se.360.cn
 .sea.napi.ucweb.com
-.seal.digicert.com
-.seal.globalsign.com
 .seal.godaddy.com
 .sealine.youku.com
 .seao.business.samsung.com
@@ -6019,6 +6083,7 @@
 .sec.resource.xiaomi.net
 .secure.diet.mayoclinic.org
 .secureflashplayerfeedback.adobe.com
+.secureir.ebaystatic.com
 .securemetrics-z.v.aaplimg.com
 .securemetrics.apple.com.cn
 .securemetrics.v.aaplimg.com
@@ -6042,7 +6107,6 @@
 .sentry.music.163.com
 .sentry.walletbot.me
 .server-side-tagging-alb-1532029273.eu-central-1.elb.amazonaws.com
-.server.iad.liveperson.net
 .serveraddr.service.kugou.com
 .service.danmu.youku.com
 .sestat.baidu.com
@@ -6073,6 +6137,7 @@
 .shop.wot.360.cn
 .shouji.360.cn
 .shouji.sogou.com
+.show-msgch.qq.com
 .show.look.360.cn
 .showwxml.qq.com
 .shuaji.360.cn
@@ -6087,11 +6152,13 @@
 .simba.m.taobao.com
 .simg.sinajs.cn
 .simple-cdn.s3.amazonaws.com
-.singular.net
 .sistr2.data.adobedc.net
 .site24x7rum.eu
 .siteintercept.qualtrics.com.cdn.cloudflare.net
 .sjarvis.taobao.com
+.skadnetwork.singular.net
+.skan-s2s.singular.net
+.skan.singular.net
 .skdisplay.jd.com
 .skyshowtimeuk.data.adobedc.net
 .slb-p2p.vcloud.ks-live.com
@@ -6163,6 +6230,7 @@
 .splitbee.io
 .spo.nel.measure.office.net
 .spocs.getpocket.com
+.spolecznosci.mgr.consensu.org
 .sponsor-logos.s3.amazonaws.com
 .spoor-api.ft.com
 .sprig.com
@@ -6175,7 +6243,6 @@
 .srtb.msn.com
 .srv.sec.miui.com
 .srv.tunefindforfans.com
-.srvcs.tumblr.com
 .ss-mndsrv.b-cdn.net
 .ssc-prod-collector-lb-2088113435.eu-north-1.elb.amazonaws.com
 .ssc.voacantonese.com
@@ -6185,7 +6252,6 @@
 .ssp.qq.com
 .ssp.yahoo.com
 .sspapi-prd.samsungrs.com
-.sstats.adobe.com
 .sstats.newyorker.com
 .sstats.wired.com
 .sstats2.newyorker.com
@@ -6207,7 +6273,6 @@
 .stat.m.jd.com
 .stat.sd.360.cn
 .stat.simba.taobao.com
-.stat.tpns.gz2.tencent.com
 .stat.u.sb
 .stat.v.baidu.com
 .stat.ws.126.net
@@ -6217,10 +6282,7 @@
 .stat.youku.com
 .stat.youpin.mi.com
 .static-addtoany-com.cdn.ampproject.org
-.static-ads.akamaized.net
-.static-doubleclick-net.l.google.com
 .static-s.iqiyi.com
-.static.addtoany.com
 .static.alimama.com
 .static.g.iqiyi.com
 .static.map.bdimg.com
@@ -6249,12 +6311,10 @@
 .stats.music.xiaomi.com
 .stats.nymag.com
 .stats.oasis.supportinsights.adobe.com
-.stats.paypal.com
 .stats.propublica.org
 .stats.qwant.com
 .stats.setapp.com
 .stats.shopify.com
-.stats.unity3d.com
 .stats.wikimedia.org
 .stats.wired.com
 .stats.wordpress.com
@@ -6291,6 +6351,7 @@
 .superrtl.data.adobedc.net
 .supportmetrics.apple.com
 .supportmetrics.v.aaplimg.com
+.survey.china.alibaba.com
 .surveygizmobeacon.s3.amazonaws.com
 .susapi.lenovomm.com
 .suvset.sohu.com
@@ -6318,16 +6379,17 @@
 .t.dukemag.duke.edu
 .t.dukewin.duke.edu
 .t.e.x.com
-.t.eloqua.com
 .t.ghostboard.io
 .t.giving.duke.edu
 .t.home.news.cn
 .t.imgur.com
 .t.impact.duke.edu
+.t.singular.net
 .t.sj.qq.com
 .t.skimresources.com
 .t.spot.im
 .t.uc.cn
+.t.update.fbsbx.com
 .t.zhipin.com
 .t1.market.xiaomi.com
 .t10.baidu.com
@@ -6433,6 +6495,7 @@
 .timon.zijieapi.com
 .tinglog.baidu.com
 .tiqcdn.com
+.titkoshirek.wordpress.com
 .tj.b.qq.com
 .tj.kugou.com
 .tj.video.qq.com
@@ -6485,6 +6548,7 @@
 .tongji.baidu.com
 .toolbar.baidu.com
 .toolbar.msn.com
+.toolbar.soso.com
 .tools.3g.qq.com
 .tools.prnewswire.com
 .top.h.qhimg.com
@@ -6548,7 +6612,6 @@
 .tracking.ti.com
 .tracking3.lenovo.com
 .trackinginternal.ti.com
-.trackonomics.net
 .trading.assistant.miui.com
 .traffic-adtracker.appspot.com
 .traffic.spot.im
@@ -6561,6 +6624,7 @@
 .trends.mobile.sina.cn
 .treverschmelerkris18.myshopify.com
 .trgfx.b-cdn.net
+.trj.valuecommerce.com
 .trk2.cp20.com.cdn.cloudflare.net
 .trkcmb.business.hsbc.com.hk
 .trkgbm.business.hsbc.com.hk
@@ -6606,6 +6670,7 @@
 .udcm.yahoo.com
 .udd1i5.zhihu.com
 .udpolimenew.baidu.com
+.uedata.amazon.com
 .ueisnifferengine2.azurewebsites.net
 .ufosdk.baidu.com
 .ug-sg.byteoversea.com
@@ -6653,7 +6718,6 @@
 .unagi.amazon.co.jp
 .unagi.amazon.com
 .unibotscdn.b-cdn.net
-.uniconsent.com
 .unidesk.alicdn.com
 .unifi-report.ubnt.com
 .uniformadvantage.data.adobedc.net
@@ -6663,18 +6727,18 @@
 .union.jd.com
 .union.mi.com
 .union.sogou.com
-.union.ucweb.com
 .unionimage.baidu.com
 .unitacs.m.taobao.com
 .unitelogreport.reader.qq.com
+.unityads.unity.cn
 .unityads.unity3d.com
 .universalorlando.com.data.adobedc.net
 .universalstudioshollywood.com.data.adobedc.net
+.unstat.baidu.com
 .up-hl.3g.qq.com
 .up1.tj.u2.ucweb.com
 .up4.ucweb.com
 .upc.data.adobedc.net
-.update.fbsbx.com
 .update.mobile.kugou.com
 .update.wps.cn
 .updatecenter.qq.com
@@ -6733,7 +6797,6 @@
 .val.api.youku.com
 .vali-g1.cp31.ott.cibntv.net
 .vali-ugc.cp31.ott.cibntv.net
-.valuecommerce.com
 .vanced.to
 .vanguard.data.adobedc.net
 .variations.brave.com
@@ -6747,8 +6810,8 @@
 .vcs.zijieapi.com
 .vd.contents.prod.eu.s3.amazonaws.com
 .vd.emp.prd.s3.amazonaws.com
-.vebo-vast.pages.dev
 .vegslb.com
+.vendorlist.consensu.org
 .venezia-measurements.s3-external-1.amazonaws.com
 .vf.startpage.com
 .vhotwsh.video.qq.com
@@ -6768,7 +6831,6 @@
 .virus-engine.sec.miui.com
 .visio-telemetry.officeapps.live.com
 .visioonline.nel.measure.office.net
-.visit.webhosting.yahoo.com
 .visualscience.external.bbc.co.uk
 .vkcdnservice.appspot.com
 .vkcdnservice.appspot.com.storage.googleapis.com
@@ -6778,6 +6840,8 @@
 .vmonitor.ws.netease.com
 .vodafonein.data.adobedc.net
 .vodus-api-serverless.azurewebsites.net
+.vodus-api.azurewebsites.net
+.voduscdn.azureedge.net
 .volceapplog.com
 .volcsiriusbd.com
 .volkswagenofamerica.data.adobedc.net
@@ -6831,6 +6895,7 @@
 .weather-analytics-events.apple.com
 .web-ivcbrasil-pixel.s3.us-west-2.amazonaws.com
 .web-ivcbrasil-tag.s3.us-west-2.amazonaws.com
+.web-sdk-cdn.singular.net
 .web-trace.ksapisrv.com
 .web.sogou.com
 .webcast-ppx.snssdk.com
@@ -6894,8 +6959,8 @@
 .wpimd38ska.data.adobedc.net
 .wpsweb-dc.wps.cn
 .wral-snowplow-collector-1139283751.us-east-1.elb.amazonaws.com
-.wren.condenastdigital.com
 .wreport.meituan.net
+.write.trackonomics.net
 .ws-p2p-v2.pull.yximgs.com
 .ws-p2p.pull.yximgs.com
 .ws.progrss.yahoo.com
@@ -6906,8 +6971,8 @@
 .wwis-dubc1-vip60.adobe.com
 .www-fmhy.pages.dev
 .www-google-analytics.l.google.com
-.www-googletagmanager.l.google.com
 .www.addtoany.com
+.www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
 .www7.springer.com
 .wxaintpcos.wxqcloud.qq.com.cn
@@ -6949,6 +7014,7 @@
 .xz-development.oss-cn-beijing.aliyuncs.com
 .xz.fbcdn.net
 .xzliewk0jg.data.adobedc.net
+.y3.ifengimg.com
 .y66xvgo5i.chuimg.com
 .y6rqjbto8p.data.adobedc.net
 .yab-adimages.s3.amazonaws.com
@@ -6985,6 +7051,7 @@
 .yunxinfw.com
 .ywx79wmimh.data.adobedc.net
 .yybx.oss-cn-hangzhou.aliyuncs.com
+.z.omappapi.com
 .zeus-nevo.pages.dev
 .zhan.vivo.com.cn
 .zhangyuyidong.cn
@@ -7178,6 +7245,7 @@ loan-supermarket.faas.ele.me
 log.mmstat.com
 log.star.ele.me
 log.stat.kugou.com
+log.ys7.com
 logview.uc.alimama.com
 lookup.api.bsb.baidu.com
 ls.l.qq.com
@@ -7225,6 +7293,7 @@ pre2-ad.alimama.com
 pre3-ad.alimama.com
 prod.nexusrules.live.com
 public.gdtimg.com
+puma.api.iqiyi.com
 qgnu18wo.sina.cn
 qiye.xiaomi.com
 quickaplus-server-api-cn-zhangjiakou.aliyuncs.com
@@ -7236,6 +7305,7 @@ render-web.11222.cn
 report.idqqimg.com
 report.yumobi.cn
 rprain.bz.mgtv.com
+sa.api.intl.miui.com
 saxs.sina.cn
 sdfp.snssdk.com
 sdkapp.uve.weibo.com
