--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-09-23 11:04:25
-# Total rules: 7214
+# Generated from relevant_rules_wildcard_aware.txt on 2025-09-24 10:38:32
+# Total rules: 7238
 
 .0a0d-d3l1vr.b-cdn.net
 .0gc6y58nkk.data.adobedc.net
@@ -196,6 +196,7 @@
 .a22788570099.cdn.optimizely.com
 .a22794480215.cdn.optimizely.com
 .a22916101539.cdn.optimizely.com
+.a2323230643.cdn.optimizely.com
 .a23497771291.cdn.optimizely.com
 .a23730662547.cdn.optimizely.com
 .a23736871217.cdn.optimizely.com
@@ -306,6 +307,7 @@
 .a29773460025.cdn.optimizely.com
 .a29864360354.cdn.optimizely.com
 .a2986850373.cdn.optimizely.com
+.a2put.chinaz.com
 .a30077310600.cdn.optimizely.com
 .a30338710256.cdn.optimizely.com
 .a30388500107.cdn.optimizely.com
@@ -313,6 +315,7 @@
 .a3058550533.cdn.optimizely.com
 .a315407138.cdn.optimizely.com
 .a3179610124.cdn.optimizely.com
+.a3391893108.cdn.optimizely.com
 .a4268742351.cdn.optimizely.com
 .a4477903919.cdn.optimizely.com
 .a4513484151455744.cdn.optimizely.com
@@ -577,6 +580,7 @@
 .adobe-dns-3.adobe.com
 .adobe-dns.adobe.com
 .adobe.data.adobedc.net
+.adobe.pp.ua
 .adobecorp.data.adobedc.net
 .adobemobiledev.data.adobedc.net
 .adp.cnki.net
@@ -761,6 +765,7 @@
 .adsview.qq.com
 .adsview2.qq.com
 .adsyndication.msn.com
+.adsystem.pages.dev
 .adtago.s3.amazonaws.com
 .adtech.coingecko.com
 .adtechvideo.s3.amazonaws.com
@@ -838,6 +843,8 @@
 .aixuntupian.oss-cn-hongkong.aliyuncs.com
 .aizhantj.com
 .ak-events-collector.spot.im
+.ak-ns.sascdn.com
+.ak.sascdn.com
 .aksb-a.akamaihd.net
 .akxmagzkoo.com
 .al.autohome.com.cn
@@ -1113,6 +1120,7 @@
 .applogapi.autohome.com.cn
 .applogios.uc.cn
 .appnext-a.akamaihd.net
+.apps.sascdn.com
 .appsad.cn
 .appsec-mobile.meituan.com
 .appsflyersdk.com
@@ -1133,6 +1141,7 @@
 .ascpqnj-oam.global.ssl.fastly.net
 .asearch.alicdn.com
 .asia-northeast1-affiliate-pr.cloudfunctions.net
+.assemblyexchange.com
 .assistjs.skimresources.com
 .assp.sohu.com
 .astat-bugly-tgw4l.mig.tencent-cloud.net
@@ -1448,6 +1457,8 @@
 .cdnweb3.pages.dev
 .cdp.cloud.unity.cn
 .cdp.cloud.unity3d.com
+.ced-ns.sascdn.com
+.ced.sascdn.com
 .centene.com.data.adobedc.net
 .cert-test.sandbox.google.com
 .ceshi127722.obs.cn-north-4.myhuaweicloud.com
@@ -1861,6 +1872,8 @@
 .cre.dp.sina.cn
 .cre.mix.sina.com.cn
 .creative-klepon-3f0ecb.netlify.app
+.creatives-ak.sascdn.com
+.creatives.sascdn.com
 .creatopy-adtag-production.b-cdn.net
 .creditonebank.data.adobedc.net
 .crl.microsoft.com
@@ -4924,6 +4937,7 @@
 .mdp-appconf-eu.heytapdl.com.akamaized.net
 .mdp-appconf-euex.heytapdl.com.akamaized.net
 .mdt.qq.com
+.measure.netcup.com
 .measure.office.com
 .measure.office.com.akamaized.net
 .measure.sanity.io
@@ -5026,6 +5040,7 @@
 .mobileads.google.com
 .mobileads.msn.com
 .mobileanalytics.us-east-1.amazonaws.com
+.mobileconfig.sascdn.com
 .mobilecrashreporting.googleapis.com
 .mobileleads.msn.com
 .mobilelog.kugou.com
@@ -5116,6 +5131,7 @@
 .mvcsixhg2e.data.adobedc.net
 .mvideo.xiaomi.com
 .mxpnl.com
+.my.chinaz.com
 .myaccount.nytimes.com
 .mybbc-analytics.files.bbci.co.uk
 .myes.youku.com
@@ -5193,6 +5209,7 @@
 .nova-collector-1192479543.us-east-1.elb.amazonaws.com
 .novelsns.html5.qq.com
 .ns.adobe.com
+.ns.sascdn.com
 .ns.weibo.cn
 .nsclick.baidu.com
 .nsclickvideo.baidu.com
@@ -5232,6 +5249,7 @@
 .omni.istockphoto.com
 .oms.barrons.com
 .oms.wsj.com
+.onekey-asset.com
 .onenoteonline.nel.measure.office.net
 .onepush.query.yahoo.com
 .onespot-tracking.herokuapp.com
@@ -5299,6 +5317,7 @@
 .p.twitter.com
 .p.yotpo.com
 .p.youku.com
+.p.zol-img.com.cn
 .p1-feedback.byteimg.com
 .p16-ad.byteoversea.com
 .p2a-json.brave.com
@@ -5504,6 +5523,7 @@
 .port.sec.miui.com
 .pos.baidu.com
 .posthog-ingress-prod-eu-1819302861.eu-central-1.elb.amazonaws.com
+.posthog-ingress-prod-us-256455477.us-east-1.elb.amazonaws.com
 .posthog-proxy-service-prod-eu-bfb365ef029ea8b9.elb.eu-central-1.amazonaws.com
 .posthog-proxy-service-prod-us-786081f7c4028325.elb.us-east-1.amazonaws.com
 .posthog.com
@@ -5643,17 +5663,20 @@
 .qt2-ngfts.lge.com
 .quantserve.com
 .qubitanalytics.appspot.com
+.quicklyedit.com
 .qurl.f.360.cn
 .qvb.qcloud.com
 .qvcinc.data.adobedc.net
 .qvid2.b-cdn.net
 .qzs.qq.com
+.r-usw1.sascdn.com
 .r.3hentai.net
 .r.bbci.co.uk
 .r.mail.163.com
 .r.moshimo.com
 .r.msn.com
 .r.release.qq.com
+.r.sascdn.com
 .r.sg.sec.miui.com
 .r.skimresources.com
 .r1.visualwebsiteoptimizer.com
@@ -6128,6 +6151,7 @@
 .stats.autohome.com.cn
 .stats.bbc.co.uk
 .stats.blogger.com
+.stats.chinaz.com
 .stats.condenastdigital.com
 .stats.controld.com
 .stats.fastcompany.com
