--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-10-12 11:58:35
-# Total rules: 7943
+# Generated from relevant_rules_wildcard_aware.txt on 2025-10-12 13:39:31
+# Total rules: 7945
 
 .0a0d-d3l1vr.b-cdn.net
 .0gc6y58nkk.data.adobedc.net
@@ -1214,6 +1214,7 @@
 .api.miwifi.com
 .api.mp.uc.cn
 .api.newsfeed.intl.miui.com
+.api.qgraph.io
 .api.sec.intl.miui.com
 .api.setting.intl.miui.com
 .api.sms.intl.miui.com
@@ -1648,6 +1649,7 @@
 .cdn.kmalgo.com
 .cdn.onesignal.com
 .cdn.pendo.io
+.cdn.qgraph.io
 .cdn.shareaholic.net
 .cdn.stat-track.com.akamaized.net
 .cdn.tanx.com
