--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-10-17 12:36:41
-# Total rules: 7865
+# Generated from relevant_rules_wildcard_aware.txt on 2025-10-17 21:53:14
+# Total rules: 7792
 
 .0a0d-d3l1vr.b-cdn.net
 .0gc6y58nkk.data.adobedc.net
@@ -7,7 +7,6 @@
 .0nvdw1kkeb.data.adobedc.net
 .1.wps.cn
 .1080872514.rsc.cdn77.org
-.1097834592.rsc.cdn77.org
 .1187531871.rsc.cdn77.org
 .119.29.196.104.bc.googleusercontent.com
 .1208344341.rsc.cdn77.org
@@ -30,7 +29,6 @@
 .2016.sina.cn
 .2025.ip138.com
 .2052.flash2-http.qq.com
-.2g312kn32qfy-1323053341.cos.ap-bangkok.myqcloud.com
 .2ihjjahguz.data.adobedc.net
 .2mdn.net
 .2xbits.eu.org
@@ -63,7 +61,6 @@
 .7ng6v3lu3c.execute-api.us-east-1.amazonaws.com
 .7q1z79gxsi.global.ssl.fastly.net
 .7zgiest3zy.data.adobedc.net
-.829331534d183e7d1f6a-8d91cc88b27b979d0ea53a10ce8855ec.r96.cf5.rackcdn.com
 .857chwukib.data.adobedc.net
 .86uk.com
 .888.tv.sohu.com
@@ -81,8 +78,6 @@
 .a-dxk.play.api.3g.youku.com
 .a-reporting.nytimes.com
 .a.baidu.com
-.a.cctv.com
-.a.cntv.cn
 .a.hcaptcha.com
 .a.hl.mi.com
 .a.imput.net
@@ -633,7 +628,6 @@
 .ad.cyapi.cn
 .ad.dev.360.cn
 .ad.docer.wps.cn
-.ad.eporner.com
 .ad.gmw.cn
 .ad.gt.cdn.cloudflare.net
 .ad.imp.joins.com
@@ -676,7 +670,6 @@
 .ad4.sina.com.cn
 .ad5.sina.com.cn
 .ada.baidu.com
-.adagiobanner.s3.amazonaws.com
 .adapi.foooooot.com
 .adash-c.m.taobao.com
 .adash-c.ut.taobao.com
@@ -809,7 +802,6 @@
 .ads-zeasn-lb-680910626.eu-west-1.elb.amazonaws.com
 .ads.95516.com
 .ads.amazon.com
-.ads.auctions.yahoo.com
 .ads.bing.com
 .ads.bloomberg.com
 .ads.bssdl.kugou.com
@@ -821,7 +813,6 @@
 .ads.imgur.com
 .ads.linkedin.com
 .ads.microsoft.com
-.ads.morningstar.com
 .ads.mozilla.org
 .ads.msn.com
 .ads.music.126.net
@@ -890,7 +881,6 @@
 .adserver-load-balancer-449180619.us-east-1.elb.amazonaws.com
 .adserver-vpc-alb-1-725730730.us-west-2.elb.amazonaws.com
 .adserver.bing.com
-.adserver.softonic.com
 .adserver.yahoo.com
 .adservergatewayprod.southcentralus.cloudapp.azure.com
 .adservice.aliexpress.com
@@ -990,7 +980,6 @@
 .aepxlg.adobe.com
 .afd.baidu.com
 .afd.l.google.com
-.affiliate.googleusercontent.com
 .affilimate.io
 .affim.baidu.com
 .afp.alicdn.com
@@ -1557,7 +1546,6 @@
 .bs.yandex.ru
 .bshg.data.adobedc.net
 .bskyb.data.adobedc.net
-.bsnj.eyeblaster.akadns.net
 .bsrv.qq.com
 .btlaunch.baidu.com
 .btloader.com
@@ -1582,54 +1570,20 @@
 .c-adash.m.taobao.com
 .c-nfa.jd.com
 .c.alimama.com
-.c.ar.msn.com
 .c.arstechnica.com
-.c.at.msn.com
 .c.baidu.com
-.c.be.msn.com
 .c.bingapis.com
-.c.br.msn.com
-.c.ca.msn.com
-.c.cl.msn.com
-.c.de.msn.com
-.c.dk.msn.com
-.c.es.msn.com
-.c.fi.msn.com
-.c.fr.msn.com
 .c.gj.qq.com
-.c.gr.msn.com
-.c.hk.msn.com
-.c.id.msn.com
-.c.ie.msn.com
-.c.il.msn.com
-.c.in.msn.com
-.c.it.msn.com
-.c.jp.msn.com
-.c.latam.msn.com
 .c.live.com
 .c.mse.360.cn
 .c.msn.com
-.c.my.msn.com
 .c.newyorker.com
-.c.nl.msn.com
-.c.no.msn.com
-.c.ph.msn.com
-.c.prodigy.msn.com
-.c.pt.msn.com
 .c.riskified.com
-.c.ru.msn.com
 .c.sayhi.360.cn
-.c.se.msn.com
-.c.sg.msn.com
 .c.sm.cn
-.c.th.msn.com
-.c.tr.msn.com
-.c.tw.msn.com
 .c.uaa.iqiyi.com
-.c.uk.msn.com
 .c.wired.com
 .c.yes.youku.com
-.c.za.msn.com
 .c0.ifengimg.com
 .c00.adobe.com
 .c0nt4ct-me.pages.dev
@@ -1813,7 +1767,6 @@
 .cms.ucweb.com
 .cmshow.gtimg.cn
 .cmsjs.eastmoney.com
-.cmweb.ilike.alibaba.com
 .cn-vmc-images.alicdn.com
 .cn.vercount.one
 .cname-asia-st-exappupgrade.vivoglobal.com
@@ -2200,6 +2153,7 @@
 .ctc.weather.com.cn
 .ctobsnssdk.com
 .ctr.hd.sohu.com
+.cu-cn-north00001.gala.convection.cn
 .cu-cn-north00002.gala.convection.cn
 .cub7ktzma4.data.adobedc.net
 .curiosity-seven.vercel.app
@@ -2212,7 +2166,6 @@
 .cvshealth.data.adobedc.net
 .cxense.com
 .cy2.vortex.data.microsoft.com.akadns.net
-.d.cntv.cn
 .d.dropbox.com
 .d.g.mi.com
 .d.kugou.com
@@ -3681,7 +3634,6 @@
 .demkc32bq01ah.cloudfront.net
 .demo.emaillpb.adobe.com
 .demoamericas275.adobe.com
-.derangedadage91wis.files.wordpress.com
 .desgao1zt7irn.cloudfront.net
 .dev-push.m.youku.com
 .dev.email-signify.cjm.adobe.com
@@ -3795,6 +3747,7 @@
 .dl1sw.baidu.com
 .dl2.bav.baidu.com
 .dl37p9e5e1vn0.cloudfront.net
+.dl4d3y1ajyv3q.cloudfront.net
 .dl5ft52dtazxd.cloudfront.net
 .dlem1deojpcg7.cloudfront.net
 .dlh8c15zw7vfn.cloudfront.net
@@ -3927,7 +3880,6 @@
 .dqd5t8xfxmhi7.cloudfront.net
 .dqif5bl25s0bf.cloudfront.net
 .dqv45r33u0ltv.cloudfront.net
-.dr.soso.com
 .dr3k6qonw2kee.cloudfront.net
 .dr6su5ow3i7eo.cloudfront.net
 .dr6vcclmzwk74.cloudfront.net
@@ -4026,6 +3978,7 @@
 .dwfbs38k9z6bu.cloudfront.net
 .dwnm2295blvjq.cloudfront.net
 .dwr3zytn850g.cloudfront.net
+.dx6ctphzljkf1.cloudfront.net
 .dx6uy6q3udhkj.cloudfront.net
 .dxgo95ahe73e8.cloudfront.net
 .dxh2ivs16758.cloudfront.net
@@ -4332,6 +4285,7 @@
 .fs-uc-nearme-com-cn.oss-cn-hangzhou.aliyuncs.com
 .fscdn.eppo.cloud
 .fsr.lenovomm.com
+.fsuseaad1.blob.core.windows.net
 .ftwo-feedback.autohome.com.cn
 .ftwo-receiver.autohome.com.cn
 .fuck-ads.vercel.app
@@ -4518,6 +4472,7 @@
 .h.msn.com
 .h1.msn.com
 .h2.msn.com
+.h3v9p8x2q1r7-agckaeh6g2ehcaes.westeurope-01.azurewebsites.net
 .h5.mse.360.cn
 .h6uzemwry4.data.adobedc.net
 .haitaoad.nosdn.127.net
@@ -4787,7 +4742,6 @@
 .imall.cntv.cn
 .img-dsp.oss-cn-beijing.aliyuncs.com
 .img-x.jd.com
-.img.alibaba.com
 .img.en25.com
 .img.gou.wpscdn.cn
 .img.n.nasdaq.com
@@ -4841,7 +4795,6 @@
 .in.applicationinsights.azure.cn
 .in.applicationinsights.azure.com
 .in.tv.global.mi.com
-.in.yimg.com
 .incoming-data-sense360.s3.amazonaws.com
 .indexww.com
 .india.miui.com
@@ -4951,7 +4904,6 @@
 .jswebcollects.kugou.com
 .juggler.services.disqus.com
 .jun01.oss-cn-beijing.aliyuncs.com
-.jzclick.soso.com
 .jzt.jd.com
 .k.qwant.com
 .kalstats.kaltura.com
@@ -4969,7 +4921,6 @@
 .kgipadstatbak.kugou.com
 .kgmobilestat.kugou.com
 .kgmobilestatbak.kugou.com
-.kiks.yandex.ru
 .kinesis.eu-west-1.amazonaws.com
 .kingdata.ksyun.com
 .kinstruments-measurements.s3-external-1.amazonaws.com
@@ -5456,7 +5407,6 @@
 .mobileanalytics.us-east-1.amazonaws.com
 .mobileconfig.sascdn.com
 .mobilecrashreporting.googleapis.com
-.mobileleads.msn.com
 .mobilelog.kugou.com
 .mobilem.360.cn
 .mobilemsg.youku.com
@@ -5501,7 +5451,6 @@
 .mqtt.zhihu.com
 .ms.bdimg.com
 .ms.bdstatic.com
-.ms.yandex.ru
 .msadsscale.azureedge.net
 .msadsscale.microsoft.com
 .msch.f.360.cn
@@ -5650,7 +5599,6 @@
 .ntvcld-a.akamaihd.net
 .nvm6zgsnhj.data.adobedc.net
 .nxet1.360doc.cn
-.nytadvertising.nytimes.com
 .o.lenovo.com
 .o.medallia.com
 .o.phb123.com
@@ -5663,14 +5611,12 @@
 .oceanengine.com
 .odc.weather.com
 .odp.optimizely.com
-.offer.alibaba.com
 .officedepot.com.data.adobedc.net
 .officehub.nel.measure.office.net
 .offnavi.map.baidu.com
 .ogads-pa.clients6.google.com
 .ogads-pa.googleapis.com
 .ohm-dot-hackster-io.appspot.com
-.oimsgad.qq.com
 .omappapi.com
 .omgid.qq.com
 .omgmta1.qq.com
@@ -5897,8 +5843,6 @@
 .ping.acc.sogou.com
 .pingback.giphy.com
 .pingback.sogou.com
-.pingfore.qq.com
-.pingfore.soso.com
 .pinghot.qq.com
 .pingjs.qq.com
 .pingma.qq.com
@@ -5971,6 +5915,7 @@
 .posthog-proxy-service-prod-eu-bfb365ef029ea8b9.elb.eu-central-1.amazonaws.com
 .posthog-proxy-service-prod-us-786081f7c4028325.elb.us-east-1.amazonaws.com
 .posthog.com
+.postmediamontrealgazette2.files.wordpress.com
 .powerpoint-telemetry.officeapps.live.com
 .powr-counter.herokuapp.com
 .ppc-excel-telemetry.officeapps.live.com
@@ -5993,7 +5938,6 @@
 .presence.teams.live.com
 .presentationtracking.netflix.com
 .preview.msn.com
-.prexyone.appspot.com
 .privacy-center.org
 .privacy-policy.truste.com
 .privacyfriendly.netlify.app
@@ -6096,7 +6040,6 @@
 .qpb0.sohu.com
 .qpb1.sohu.com
 .qqdata.ab.qq.com
-.qqlogo.qq.com
 .qqshow2-item.qq.com
 .qreport.qunar.com
 .qring-tms.qq.com
@@ -6121,7 +6064,6 @@
 .r.sascdn.com
 .r.sg.sec.miui.com
 .r.skimresources.com
-.r.turn.com.akadns.net
 .r1.visualwebsiteoptimizer.com
 .r2.visualwebsiteoptimizer.com
 .r3.visualwebsiteoptimizer.com
@@ -6131,7 +6073,6 @@
 .rad.microsoft.com
 .rad.msn.com
 .rads.msn.com
-.rads.stackoverflow.com
 .raine.accuweather.com
 .rapid-glade-cde8.asoumare042024.workers.dev
 .ras.yahoo.com
@@ -6141,7 +6082,6 @@
 .rawtelemetry-west.servicebus.windows.net
 .rbs.data.adobedc.net
 .rcgi.video.qq.com
-.rcm-images.amazon.com
 .rcm.amazon.com
 .rd.autohome.com.cn
 .rd.e.sogou.com
@@ -6212,7 +6152,6 @@
 .rich.qq.com
 .richaudience.com
 .richmedia.video.qq.com
-.richmedia.yimg.com
 .rics.data.adobedc.net
 .risk.clearbit.com
 .river.zhidao.baidu.com
@@ -6407,7 +6346,6 @@
 .sec.resource.xiaomi.net
 .secure.diet.mayoclinic.org
 .secureflashplayerfeedback.adobe.com
-.secureir.ebaystatic.com
 .securemetrics-z.v.aaplimg.com
 .securemetrics.apple.com.cn
 .securemetrics.v.aaplimg.com
@@ -6465,6 +6403,7 @@
 .server-side-tagging-c4algtcb7q-uc.a.run.app
 .server-side-tagging-cscijzmvia-uc.a.run.app
 .server-side-tagging-dh2ikapgzq-uc.a.run.app
+.server-side-tagging-dji2sahn7q-uc.a.run.app
 .server-side-tagging-epqosoa4sq-ew.a.run.app
 .server-side-tagging-eu-7twoo26kcq-ew.a.run.app
 .server-side-tagging-ezitazmtaq-uc.a.run.app
@@ -6555,7 +6494,6 @@
 .shop.wot.360.cn
 .shouji.360.cn
 .shouji.sogou.com
-.show-msgch.qq.com
 .show.look.360.cn
 .showwxml.qq.com
 .shuaji.360.cn
@@ -6652,7 +6590,6 @@
 .splitbee.io
 .spo.nel.measure.office.net
 .spocs.getpocket.com
-.spolecznosci.mgr.consensu.org
 .sponsor-logos.s3.amazonaws.com
 .spoor-api.ft.com
 .sprig.com
@@ -6799,7 +6736,6 @@
 .supersonicads-a.akamaihd.net
 .supportmetrics.apple.com
 .supportmetrics.v.aaplimg.com
-.survey.china.alibaba.com
 .surveygizmobeacon.s3.amazonaws.com
 .susapi.lenovomm.com
 .suvset.sohu.com
@@ -6953,7 +6889,6 @@
 .tinglog.baidu.com
 .tingyun.com
 .tiqcdn.com
-.titkoshirek.wordpress.com
 .tj.b.qq.com
 .tj.kugou.com
 .tj.video.qq.com
@@ -7005,7 +6940,6 @@
 .tongji.baidu.com
 .toolbar.baidu.com
 .toolbar.msn.com
-.toolbar.soso.com
 .tools.3g.qq.com
 .tools.prnewswire.com
 .toots-a.akamaihd.net
@@ -7144,7 +7078,6 @@
 .udcm.yahoo.com
 .udd1i5.zhihu.com
 .udpolimenew.baidu.com
-.uedata.amazon.com
 .ueisnifferengine2.azurewebsites.net
 .ufosdk.baidu.com
 .ug-sg.byteoversea.com
@@ -7208,10 +7141,8 @@
 .unionimage.baidu.com
 .unitacs.m.taobao.com
 .unitelogreport.reader.qq.com
-.unityads.unity.cn
 .unityads.unity3d.com
 .universalorlando.com.data.adobedc.net
-.unstat.baidu.com
 .up-hl.3g.qq.com
 .up1.tj.u2.ucweb.com
 .up4.ucweb.com
@@ -7295,7 +7226,6 @@
 .vd.emp.prd.s3.amazonaws.com
 .vebo-vast.pages.dev
 .vegslb.com
-.vendorlist.consensu.org
 .venezia-measurements.s3-external-1.amazonaws.com
 .vf.startpage.com
 .vhotwsh.video.qq.com
@@ -7326,7 +7256,6 @@
 .vmonitor.ws.netease.com
 .vodus-api-serverless.azurewebsites.net
 .vodus-api.azurewebsites.net
-.voduscdn.azureedge.net
 .voiceads.cn
 .volceapplog.com
 .volcsiriusbd.com
@@ -7461,7 +7390,6 @@
 .www-google-analytics.l.google.com
 .www-googletagmanager.l.google.com
 .www.addtoany.com
-.www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
 .www7.springer.com
 .wxaintpcos.wxqcloud.qq.com.cn
@@ -7504,7 +7432,6 @@
 .xz-development.oss-cn-beijing.aliyuncs.com
 .xz.fbcdn.net
 .xzliewk0jg.data.adobedc.net
-.y3.ifengimg.com
 .y66xvgo5i.chuimg.com
 .y6rqjbto8p.data.adobedc.net
 .yab-adimages.s3.amazonaws.com
